# xtrism

./: .bzrignore  .gitignore  CMakeLists.txt  Makefile  README.md  xtrism
data/: bricks  bricks.orig  chgbrks.pl  glopts  hisc  hisc.sync-conflict-20220913-112633-EEXRAQT  old-bricks  players  pre-hisc  probs  teams
data/icons/: Setting-Icon-SVG-03mcds.ATTRIBUTION.txt  Setting-Icon-SVG-03mcds.LICENSE.txt
data/sound/: Makefile  applause  applause.raw  drop  drop-44100.sw  drop.raw  explode  explode-30000.sw  explode.raw  shoosh  shoosh.raw  speedup  speedup.raw  turn  turn-50000.sw  turn.raw  warning  warning-35000.sw  warning.raw
hiscore/: Catalogue  HiscLine.H
notes/: BUG
src/: .ccmalloc  .datadir  .gdb_history  .kdbgrc.xtrism  1-Certification  1-Notes  CMakeLists.txt  Imake.tmpl  Imakefile  Makefile  Makefile.bak  TAGS  TOETSEN  cpfromsteef  diffsteef  hgrep  mkclean  mkdistr  mksemistatic  tbrowse  uncrustify.cfg  xer  xtrism.pro
src/basics/: 1-Notes  BBox.C  BBox.H  BBox.cpp  BBox.h  Byte.H  Byte.h  Filename.C  Filename.H  Filename.cpp  Infty.H  KeyCode.H  Makefile  MapIterator.h  Throw.H  Word.H  dbx.C  dbx.H  dbx.cpp  dbx.h  getline.C  getline.H  getline.cpp  minmax.H  minmax.h  mymakefile  stringtok.C  stringtok.H  stringtok.cpp  stringtok.h  timetest.C  timetest.H  vecio.H
src/bricks/: BrickCell.cpp  BrickCell.h  BrickData.cpp  BrickData.h  BrickSprites.cpp  BrickSprites.h  CellMatrix.C  CellMatrix.H  CellMatrix.cpp  CellMatrix.h  Consts.H  Consts.h  Makefile  Probability.C  Probability.H  Probability.cpp  Probability.h  brickcell.C  brickcell.H  brickcell.cpp  brickcell.h  brickdefs.h  bsprites.C  bsprites.H  bsprites.cpp  bsprites.h  data.C  data.H  data.cpp  data.h
src/bytemap/: BMRecolour.C  BMRecolour.H  BMRecolour.cpp  BMRecolour.h  ByteImage.C  ByteImage.H  ByteImage.cpp  ByteImage.h  ByteMap.C  ByteMap.H  ByteMap.cpp  ByteMap.h  GrayImage.cpp  GrayImage.h  Makefile  RGB.h  RGBImage.C  RGBImage.H  RGBImage.cpp  RGBImage.h  RGBMap.C  RGBMap.H  RGBMap.cpp  RGBMap.h  RGBRecolor.cpp  RGBRecolor.h  WideRGB.H  WideRGB.h
src/dsp/: Makefile  SPlayer.C  SPlayer.H  SPlayer.cpp  SPlayer.h  Sample.C  Sample.cpp  Sample.h
src/env/: 1-Notes  MainWindow.cpp  MainWindow.h  Makefile  TBusy.H  TBusy.h  TCallBack.H  TCallBack.h  TCmap.C  TCmap.H  TCmap.cpp  TCmap.h  TCompress.C  TCompress.H  TCompress.cpp  TCompress.h  TDate.C  TDate.H  TDate.cpp  TDrawCol.C  TDrawCol.H  TDrawCol.cpp  TDrawCol.h  TEnv.C  TEnv.H  TEnv.cpp  TEnv.h  TFont.C  TFont.H  TFont.cpp  TFont.h  TGFX.C  TGFX.H  TGFX.cpp  TGFX.h  THandlers.H  THandlers.h  TImage.C  TImage.H  TImage.cpp  (+24 more)
src/esd/: SPlayer.C  SPlayer.H  SPlayer.cpp  SPlayer.h  Sample.C  Sample.cpp  Sample.h
src/esd-1/: SPlayer.C  SPlayer.H  Sample.C  Sample.H  tst.C
src/esd-2/: Sample.C  Sample.H
src/esd-3/: SPlayer.C  SPlayer.H  SampleExc.H
src/game/: 1.Structure  2-Pudding  BrickEnv.C  BrickEnv.H  BrickEnv.cpp  BrickEnv.h  ControlBuf.H  ControlBuf.h  Controls.C  Controls.H  Controls.cpp  Controls.h  FBPos.H  FallBrick.C  FallBrick.H  FallBrick.cpp  FallBrick.h  Fortuna.C  Fortuna.H  Fortuna.cpp  Fortuna.h  Game.C  Game.H  Game.cpp  Game.h  GameQuit.H  GameQuit.h  GameTime.C  GameTime.H  GameTime.cpp  GameTime.h  HighScoreScreen.cpp  HighScoreScreen.h  KbdBuffer.C  KbdBuffer.H  KbdBuffer.cpp  KbdBuffer.h  Keyboard.C  Keyboard.H  Keyboard.cpp  (+63 more)
src/gfx/: 1-Notes  Box3D.C  Box3D.H  Box3D.cpp  Box3D.h  Button.C  Button.H  Button.cpp  Button.h  ComboBox.cpp  ComboBox.h  GBParent.C  GBParent.H  GBParent.cpp  GBParent.h  GBox.C  GBox.H  GBox.cpp  GBox.h  GrayImage.cpp  Logo.cpp  Logo.h  MMBG.cpp  MMBG.h  Makefile  MarbledButton.cpp  MarbledButton.h  MenuBox.cpp  MenuBox.h  Old-1-Notes  RGBImage.cpp  Rainbow.cpp  TextButton.cpp  TextButton.h  TopBox.C  TopBox.H  TopBox.cpp  TopBox.h  TranspLabel.cpp  TranspLabel.h  (+2 more)
src/globals/: Globals.C  Globals.H  Globals.cpp  Globals.h  Makefile
src/hiscore/: HiscLine.C  HiscLine.C,v  HiscLine.H,v  HiscList.C  HiscList.C,v  HiscList.H  HiscList.H,v
src/kbdtst/: kbdtst  kbdtst.C  makefile
src/main/: MainWindow.cpp  MainWindow.h  Makefile  XWorld.cpp  font.qrc  main.C  main.cpp
src/mainmenu/: BricksetSelector.cpp  BricksetSelector.h  KeyEditor.cpp  KeyEditor.h  MainMenu.C  MainMenu.H  MainMenu.cpp  MainMenu.h  Makefile  NewPlayer.cpp  NewPlayer.h  PlayButton.C  PlayButton.H  PlayButton.cpp  PlayButton.h  PlayerSelector.C  PlayerSelector.H  PlayerSelector.cpp  PlayerSelector.h  icons.qrc
src/options/: 1-Notes  GameKeys.cpp  GameKeys.h  GlobalOpts.C  GlobalOpts.H  GlobalOpts.cpp  GlobalOpts.h  Makefile  MetaKeys.cpp  MetaKeys.h  Options.h  (+26 more)
testbed/: TestBed.C  TestBed.C,v  TestBed.H  TestBed.H,v  main.C  main.H,v
tools/: converthisc.py  mkbricks.py  mknativekeys.py  updatesources.sh
(+134 files in other folders)
